# randomizer

./: .gitignore  ListManager.py  NewPosition.py  Position.py  SavedList.py  main.py  pyproject.toml  randomizer.kv
screens/: ListScreen.py  RandomNumber.py  Randomizer.py  Wheel.py
